homework_11/05-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: couple-games
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: legesh/sdk-client:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: couple-games
spec:
  selector:
    app: client
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
