homework_11/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couple-games-ingress
  namespace: couple-games
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: couple-games.127.0.0.1.sslip.io
      http:
        paths:
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client
                port:
                  number: 8080
